got POST to work

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -18,7 +18,7 @@
           <input placeholder="Description" id="description" type="text" class="validate">
         </div>
         <div class="col s1 center">
-    <a class="btn-floating btn-large waves-effect waves-light red"><i id="newitem" class="material-icons">add</i></a>
+    <a class="btn-floating btn-large waves-effect waves-light red"><i id="newitem" type="submit" class="material-icons">add</i></a>
         </div>
       </div>
       </fieldset>
